[package]
name = "rustviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
femtovg = { version = "0.19.3", features = ["glutin"] }
glutin = { version = "0.31.0", features = ["wayland"], default-features = false }
glutin-winit = "0.4.0"
raw-window-handle = "0.5.0"
resource = "0.6.0"
ringbuf = "0.4.0"
strum = "0.27.0"
strum_macros = "0.27.0"
winit = "0.29.15"
spectrum-analyzer="1.5.0"
nix = { version = "0.30.1", features = ["fs"] }
